--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,17 @@ project(polyorbite_rover)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 
-set(OpenCV_DIR /usr/local/share/OpenCV)
 
 
 find_package(catkin REQUIRED COMPONENTS
-  OpenCV REQUIRED
   roscpp
   rospy
   std_msgs
+  cv_bridge
+  image_transport
 )
 
+find_package(OpenCV REQUIRED)
 
 if(CATKIN_ENABLE_TESTING)
   find_package(roslaunch REQUIRED)
@@ -129,6 +130,7 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -144,7 +146,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/image_suscriber.cpp)
+add_executable(image_suscriber src/image_suscriber.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -156,10 +158,8 @@ add_executable(${PROJECT_NAME}_node src/image_suscriber.cpp)
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+# Specify libraries to link a library or executable target against
+target_link_libraries(image_suscriber ${OpenCV_LIBS} ${catkin_LIBRARIES})
 
 #############
 ## Install ##
