--- a/package.xml
+++ b/package.xml
@@ -10,13 +10,19 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-   <build_depend>cv_bridge</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+
  <!--<run_depend>controller_manager</run_depend>
 
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
 
   <run_depend>rqt_robot_steering</run_depend>-->
+  <run_depend>std_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>diff_drive_controller</run_depend>
   <run_depend>joint_state_controller</run_depend>
