--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   cv_bridge
   image_transport
+  nav_msgs
+  tf
 )
 
 find_package(OpenCV REQUIRED)
@@ -147,7 +149,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(image_suscriber src/image_suscriber.cpp)
-
+add_executable(odom src/odom.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -160,7 +162,7 @@ add_executable(image_suscriber src/image_suscriber.cpp)
 
 # Specify libraries to link a library or executable target against
 target_link_libraries(image_suscriber ${OpenCV_LIBS} ${catkin_LIBRARIES})
-
+target_link_libraries(odom ${catkin_LIBRARIES})
 #############
 ## Install ##
 #############
