--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,10 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(image_suscriber src/image_suscriber.cpp)
 add_executable(odom src/odom.cpp)
+add_executable(control_6202 src/control_6202.cpp)
+
+
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -163,6 +167,7 @@ add_executable(odom src/odom.cpp)
 # Specify libraries to link a library or executable target against
 target_link_libraries(image_suscriber ${OpenCV_LIBS} ${catkin_LIBRARIES})
 target_link_libraries(odom ${catkin_LIBRARIES})
+target_link_libraries(control_6202 ${catkin_LIBRARIES})
 #############
 ## Install ##
 #############
