--- a/config/diffdrive.yaml
+++ b/config/diffdrive.yaml
@@ -1,10 +1,12 @@
 type: "diff_drive_controller/DiffDriveController"
 publish_rate: 50
 
+
+
 left_wheel: ['left_front_wheel_joint','left_middle_wheel_joint', 'left_back_wheel_joint']
 right_wheel: ['right_front_wheel_joint', 'right_middle_wheel_joint', 'right_back_wheel_joint']
 
-wheel_separation: 0.44
+wheel_separation: 1.1
 
 # Odometry covariances for the encoder output of the robot. These values should
 # be tuned to your robot's sample odometry data, but these values are a good place
@@ -14,6 +16,8 @@ twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
 
 # Top level frame (link) of the robot description
 base_frame_id: base_link
+
+enable_odom_tf: false
 
 # Velocity and acceleration limits for the robot
 linear:
@@ -29,44 +33,11 @@ angular:
     has_acceleration_limits: true
     max_acceleration       : 6.0   # rad/s^2
 
-/gazebo_ros_control:
-  pid_gains:
-      left_front_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
+/gazebo_ros_control/pid_gains:
+      left_front_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
+      left_middle_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
+      left_back_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
+      right_front_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
+      right_middle_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
+      right_back_wheel_joint: {p: 1.0, i: 0.0, d: 1.0}
 
-/gazebo_ros_control:
-  pid_gains:
-      left_middle_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
-
-/gazebo_ros_control:
-  pid_gains:
-      left_back_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
-
-/gazebo_ros_control:
-  pid_gains:
-      right_front_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
-
-/gazebo_ros_control:
-  pid_gains:
-      right_middle_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
-
-/gazebo_ros_control:
-  pid_gains:
-      right_back_wheel_joint:
-          p: 1.0
-          i: 1.0
-          d: 1.0
