--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
-
+  <build_depend>libpcl-all-dev</build_depend>
 
  <!--<run_depend>controller_manager</run_depend>
 
@@ -33,6 +33,7 @@
   <run_depend>rviz</run_depend>
   <run_depend>xacro</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>libpcl-all</run_depend>
 
   <export>
 		<controller_interface plugin="${prefix}/controller_plugins.xml" />
