--- a/rover_control/package.xml
+++ b/rover_control/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>polyorbite_rover</name>
+  <name>polyorbite_rover_control</name>
   <version>0.0.5</version>
-  <description>polyorbite_rover</description>
+  <description>polyorbite_rover_control</description>
   <author email="x.ouimet@gmail.com">Xavier Ouimet</author>
   <maintainer email="x.ouimet@gmail.com">Xavier Ouimet</maintainer>
 
@@ -34,6 +34,9 @@
   <run_depend>xacro</run_depend>
   <run_depend>nav_msgs</run_depend>
 
+  <run_depend>controller_manager</run_depend>
+  <run_depend>hardware_interface</run_depend>
+  
   <export>
 		<controller_interface plugin="${prefix}/controller_plugins.xml" />
 
