--- a/rover_control/CMakeLists.txt
+++ b/rover_control/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   nav_msgs
   tf
+  message_generation
 )
 
 find_package(OpenCV REQUIRED)
@@ -61,11 +62,10 @@ endif()
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  Code.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -82,10 +82,10 @@ endif()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -119,7 +119,7 @@ endif()
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES void
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS message_runtime #roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
