--- a/rover_control/package.xml
+++ b/rover_control/package.xml
@@ -15,6 +15,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
  <!--<run_depend>controller_manager</run_depend>
