--- a/rover_control/package.xml
+++ b/rover_control/package.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0"?>
-<package>
+<package format="1">
   <name>polyorbite_rover</name>
   <version>0.0.5</version>
   <description>polyorbite_rover</description>
   <author email="x.ouimet@gmail.com">Xavier Ouimet</author>
   <maintainer email="x.ouimet@gmail.com">Xavier Ouimet</maintainer>
-
 
   <license>BSD</license>
 
@@ -16,15 +15,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
 
-
- <!--<run_depend>controller_manager</run_depend>
-
-  <run_depend>gazebo_ros</run_depend>
-  <run_depend>gazebo_ros_control</run_depend>
-
-  <run_depend>rqt_robot_steering</run_depend>-->
   <run_depend>std_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>cv_bridge</run_depend>
@@ -35,6 +26,7 @@
   <run_depend>rviz</run_depend>
   <run_depend>xacro</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
 		<controller_interface plugin="${prefix}/controller_plugins.xml" />
