Added controller_manager and hardware_interface as required packaged for rover_control package

--- a/rover_control/CMakeLists.txt
+++ b/rover_control/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   nav_msgs
   tf
+  controller_manager
+  hardware_interface
 )
 
 find_package(OpenCV REQUIRED)
