Renamed ina260.py to ina260_node.py and added shebang

--- a/ina260/CMakeLists.txt
+++ b/ina260/CMakeLists.txt
@@ -194,7 +194,7 @@ include_directories(
 
 
 
-catkin_install_python(PROGRAMS src/ina260.py
+catkin_install_python(PROGRAMS src/ina260_node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
