--- a/rover_control/package.xml
+++ b/rover_control/package.xml
@@ -28,6 +28,7 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>xacro</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>zed_wrapper</exec_depend>
 
   <export>
 		<controller_interface plugin="${prefix}/controller_plugins.xml" />
