first try with encoder code for the motors

--- a/rover_hardware_proxy/CMakeLists.txt
+++ b/rover_hardware_proxy/CMakeLists.txt
@@ -28,5 +28,6 @@ include_directories(
 
 catkin_install_python(
   PROGRAMS scripts/rover_drive_train_proxy.py
+  PROGRAMS scripts/rover_speed_encoder.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
