Fixed hardware proxy CMakeLists, script was not found

--- a/rover_hardware_proxy/CMakeLists.txt
+++ b/rover_hardware_proxy/CMakeLists.txt
@@ -27,7 +27,6 @@ include_directories(
 )
 
 catkin_install_python(
-  PROGRAMS scripts/rover_drive_train_proxy.py
-  PROGRAMS scripts/rover_speed_encoder.py
+  PROGRAMS scripts/rover_drive_train_proxy.py scripts/rover_speed_encoder.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
